# tox-in-docker

./: .coveragerc  .gitignore  LICENSE  LICENSE.md  README.md  Taskfile.yml  pyproject.toml  tox.ini
.circleci/: config.yml
docs/: index.md  mkdocs.yml
examples/: README.md
examples/build_container_image/: README.md  Taskfile.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
examples/build_container_image/docker_build_dir/: Dockerfile
examples/build_container_image/src/build_container_image/: main.py
examples/build_container_image/test/: test_main.py
src/tox_in_docker/: __init__.py  cli.py  main.py  plugin.py  util.py
tests/docker/: Dockerfile
tests/unit/: test_main.py  test_plugin.py  test_util.py  util.py
