[tool.poetry]
name = "tox-in-docker"
version = "0.1.0"
description = "A tox plugin for running tests within docker containers"
authors = ["Tyler Jachetta <tjachetta@imgix.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
