[tool.poetry]
name = "tox-in-docker"
version = "0.1.0"
description = "A tox plugin for running tests within docker containers"
readme = "README.md"

authors = ["Tyler Jachetta <tjachetta@imgix.com>"]
license = "BSD 2 clause"

[tool.poetry.dependencies]
python = "^3.8"
pytest-cov = "^2.12.1"
docker = "^5.0.0"

[tool.poetry.dev-dependencies]
diff-cover = "^6.2.0"
pytest = "^6.2.4"
pytest-xdist = "^2.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins.tox]
tox_in_docker = "tox_in_docker.plugin"

[tool.black]
line-length = 99
