[project]
name = "tox-in-docker"
dynamic = ["version", "readme"]
description = "A tox plugin for running tests within docker containers"
requires-python = "~=3.9"
license = {file="LICENSE.md"}
authors = [{name="H.H. Rev. Dktr. Tyler Jachetta", email = "me@tylerjachetta.net"}]

dependencies = [
    "docker~=5.0",
    "tox~=3.25"
]

[project.optional-dependencies]
test = ["tox~= 3.25"]
pytest = [
    "pytest-cov~=2.12",
    "pytest~=6.2",
    "pytest-xdist~=2.3"
]
coverage = [
    "diff-cover~=6.2",
    "coverage~=5.5"
]
build = [
    "wheel~=0.37"
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.black]
line-length = 99

[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"
