[metadata]
name = build_container_image
description = meh
long_description = file: README.md
long_description_content_type = text/markdown
url = https://foo.bar.baz
author = Jane Q. Developer
license = MIT
platforms = any
classifiers =
    Development Status :: 0 - Nah
    Topic :: Software Development :: Testing
keywords = test, please, ignore

[options]
packages = find:
install_requires =
    numpy

python_requires = >=3.8

[options.packages.find]
where = src

[options.extras_require]
testing =
    # I may be wrong but it doesn't appear that setuptools is currently
    # supporting relative deps. It will be installed but not by dependency.
    # Fortunately, this is an example, so I'm just going to call out the
    # missing dependency, and be okay with that.
    pytest
    tox>=3.26
